// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountList reducer should handle ACCOUNTLIST_CHANGE_BOOL 1`] = `
Object {
  "bool": true,
}
`;

exports[`AccountList reducer should return the initial state 1`] = `
Object {
  "bool": false,
}
`;
